# as-code

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  config.yaml  help.txt  pyproject.toml
api/: chunker_service.py  main.py  routes.py
config/: inference_profiles.py  settings.py
providers/: litert_cli.py
router/: rules.py
runtime/coordinator/: __init__.py  continuity_resolver.py  intent.py  language_detection.py  manager.py  models.py  mutator.py  state_store.py  suggestions.py  workflow.py
scripts/: install.ps1  run.ps1
skills/business/: prompt.md
skills/content_creator/: prompt.md
skills/legal/: prompt.md
skills/marketing/: prompt.md
skills/sales/: prompt.md
tests/: test_deterministic_continuity.py
ui/: app.js  index.html  memory_ui.js
